text wrap fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
-  background-color: rgb(228, 248, 248);
+  background-color: rgb(239, 248, 248);
 }
+
 .navbar-default .navbar-brand {
   color: #ffffff;
   background-color: teal;
